<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.elejar.memeji.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.elejar.memeji.ui.fragments.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categoriesFragment_to_categoryMemesFragment"
            app:destination="@id/categoryMemesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.elejar.memeji.ui.fragments.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more">
        <action
            android:id="@+id/action_moreFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/categoryMemesFragment"
        android:name="com.elejar.memeji.ui.fragments.CategoryMemesFragment"
        android:label="{categoryName}"
        tools:layout="@layout/fragment_category_memes">
        <argument
            android:name="categoryName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.elejar.memeji.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
